welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: not found: value condition
while (condition != 2 * biscuits = caseOrange + 1) {
       ^RunHalf:14: error: Unit does not take parameters
  } else () {
            ^